models/default/httproute-models.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: default-model-list
  namespace: ai-gateway
spec:
  parentRefs:
    - name: envoy-ai-gateway-basic
      namespace: envoy-ai-gateway-system
      sectionName: http
  hostnames:
    - ai.zer0.garden
  rules:
    - matches:
        - path:
            type: Exact
            value: /v1/models
      backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: default-predictor
